feat: location day 형식 변경